--- a/Jsp/src/dbcp.properties
+++ b/Jsp/src/dbcp.properties
@@ -1,7 +1,7 @@
-username=root
-password=yzw747452
-url=jdbc:mysql:///test
-driverClassName=com.mysql.jdbc.Driver
+#username=root
+#password=yzw747452
+#url=jdbc:mysql:///test
+#driverClassName=com.mysql.jdbc.Driver
 
 #username=sa
 #password=747452
@@ -13,6 +13,11 @@ driverClassName=com.mysql.jdbc.Driver
 #url=jdbc:oracle:thin:@localhost:1521:orcl
 #driverClassName=oracle.jdbc.driver.OracleDriver
 
+user=YINZWII
+password=YINZWII
+jdbcUrl=jdbc:oracle:thin:@localhost:1521:orcl
+driver=oracle.jdbc.driver.OracleDriver
+
 initialSize=5
 maxIdle=18
 minIdle=5
@@ -20,7 +25,8 @@ maxTotal=20
 maxWaitMillis=5000
 
 #test connections in pool,!!!for oracle :SELECT 1 FROM DB_NAME
-validationQuery=SELECT 1
+#validationQuery=SELECT 1
+validationQuery=SELECT 1 FROM DB_NAME
 testWhileIdle=true
 testOnBorrow=false
 timeBetweenEvictionRunsMillis=30000
