--- a/Jsp/src/jdbc.properties
+++ b/Jsp/src/jdbc.properties
@@ -9,7 +9,12 @@
 #jdbcUrl=jdbc:sqlserver://localhost:1433;DatabaseName=web
 #driver=com.microsoft.sqlserver.jdbc.SQLServerDriver
 
-user=hr
-password=yzw747452
+#user=hr
+#password=yzw747452
+#jdbcUrl=jdbc:oracle:thin:@localhost:1521:orcl
+#driver=oracle.jdbc.driver.OracleDriver
+
+user=YINZWII
+password=YINZWII
 jdbcUrl=jdbc:oracle:thin:@localhost:1521:orcl
 driver=oracle.jdbc.driver.OracleDriver
